data/derived/comb/progs/unify/prog4597.ml.out
Characters 48-58:
  let fixpoint (f,b) = wwhile ((let (x,y)= f b in (x, x<100)),b);;
                                                  ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
